updated : responsive home layout fixed : gulp build task no watching

--- a/src/client/pages/Home/Home.html
+++ b/src/client/pages/Home/Home.html
@@ -8,13 +8,13 @@
         </h1>
     </header>
 
-    <main class="grid is-2-columns is-gap-2 container">
-        <section>
+    <main class="home-content container">
+        <section class="form-container">
             <h2 class="heading is-3">Register</h2>
             <RegisterForm/>
         </section>
 
-        <section>
+        <section class="form-container">
             <h2 class="heading is-3">Login</h2>
             <LoginForm/>
         </section>
