--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta name="viewport" content="width=device-width, user-scalable=no">
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <meta name="viewport" content="width=device-width,initial-scale=1">
         <link rel="stylesheet" href="/css/styles.css">
-        <title>Pop Network</title>
+        <title>Node-React demo app</title>
     </head>
     <body>
         <div id="app"></div>
 
         <script defer src="https://use.fontawesome.com/releases/v5.0.12/js/all.js" integrity="sha384-Voup2lBiiyZYkRto2XWqbzxHXwzcm4A5RfdfG6466bu5LqjwwrjXCMBQBLMWh7qR" crossorigin="anonymous"></script>
-
-
-        <script>
-            window.FontAwesomeConfig = {
-                searchPseudoElements: true
-            }
-        </script>
         <script src="/js/main.js"></script>
     </body>
 </html>
