Pascal Case requirement bug fixed

--- a/src/client/pages/Profile/Profile.html
+++ b/src/client/pages/Profile/Profile.html
@@ -1,4 +1,4 @@
-<rt-import name="default" as="AuthService" from="../../services/Authservice.js"/>
+<rt-import name="default" as="AuthService" from="../../services/AuthService.js"/>
 
 <div>
     <header class="header is-big is-secondary txt-white">
