--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
     </head>
     <body>
         <div id="app"></div>
+
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.0.13/howler.core.min.js"></script>
         <script defer src="https://use.fontawesome.com/releases/v5.0.12/js/all.js" integrity="sha384-Voup2lBiiyZYkRto2XWqbzxHXwzcm4A5RfdfG6466bu5LqjwwrjXCMBQBLMWh7qR" crossorigin="anonymous"></script>
         <script src="/js/main.js"></script>
     </body>
